<resources>
    <string name="app_name">WadzPay POS</string>
    <string name="save">Save</string>
    <string name="generate">Generate QR Code</string>
    <string name="enter_text">Enter Text</string>
    <string name="value_required">Value Required</string>
    <string name="wadzpay">WadzPay</string>
    <string name="request_payment">Request Payment</string>
    <string name="recipient">Recipient</string>
    <string name="currency">Currency</string>
    <string name="btc">BTC</string>
    <string name="continue_text">Continue</string>
    <string name="new_payment_request">New Payment Request</string>
    <string name="request_to">Request to</string>
    <string name="fee">Fee</string>
    <string name="terms_conditions_text">I understand that my personal data may used for marketing purpose by WadzPay or its partners and hereby consent to receive marketing and WadzPay</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="payment_request_confirmation">Payment Request Confirmation</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="morshedlou">morshedlou</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="emilystrain">emilystrain</string>
    <string name="emilystrain_gmail_com">emilystrain@gmail.com</string>
    <string name="screens_title">WadzPay POS</string>
    <string name="total_payable">Total Payable</string>
    <string name="regenerate_qr_code">Regenerate QR Code</string>
    <string name="currency_aed_to_ddf">Currency AED To DDF</string>
    <string name="using_digital_currency_as_given">You are making payment of AED to DDF using digital currency as given below</string>
    <string name="conversion_rates">Conversion Rates</string>
    <string name="total_pay">Total Pay</string>
    <string name="submit">Submit</string>
    <string name="wadzpay_fee">WadzPay Fee</string>
    <string name="please_wait">Please Wait...</string>
    <string name="ok">OK</string>
    <string name="error_message_validate">Please fill in the required field(s) to continue:</string>
    <string name="do_you_want_to_cancel">Do You Want To Cancel?</string>
    <string name="yes_discard">Yes, Discard</string>
    <string name="yes_save_for_later">Yes, Save for Later</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="okay">Okay</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_amount">Select Amount</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="payment_disclaimer">The recipient may receive less than the amount shown here due to other fees charged by the receiving wallet. Actual transaction fees may vary based on network traffic. If there is insufficient balance to pay for transaction fees, the transfer may be rejected.</string>
    <string name="crypto_amount">Crypto Amount</string>
    <string name="crypto">Crypto</string>
    <string name="fiat_type_aed">Fiat Type - AED</string>
    <string name="choose_amount">Choose Amount</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="done">DONE</string>
    <string name="select_digital_currency">Select Digital Currency</string>
    <string name="invalid_details">Invalid Details</string>
    <string name="invalid_currency">Invalid Currency</string>
    <string name="invalid_fiat">Invalid Fiat</string>
    <string name="digital_currency">Digital Currency</string>
    <string name="select_currency">Select Currency</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="email_verification">Email Verification</string>
    <string name="password_hint">Password Hint: Minimum 8 characters and maximum 16 characters, one uppercase, one lowercase, one number and one special character</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="payment_time_text">You have 60 seconds to complete the transaction with the currently displayed QR code</string>
    <string name="fiat_amount">Fiat Amount</string>
    <string name="qr_format">Currency</string>
    <string name="qr_with_address">Address</string>
    <string name="qr_with_amount">Amount</string>
    <string name="qr_with_currency">Currency</string>
    <string name="total_fiat">Total Fiat</string>
    <string name="total_amount">Total Amount</string>
    <string name="generate_print">Generate Print</string>
    <string name="generate_receipt">Generate Receipt</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="enter_fiat_amount">Enter Fiat Amount</string>
    <string name="select_digital_asset">Select Digital Asset</string>
    <string name="fiat">FIAT</string>
    <string name="email_email_com">email@email.com</string>
    <string name="email_id">Email Id :</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number :</string>
    <string name="phone_number_sample">9885111234</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_settings">User Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="verification_code">Verification Code</string>
    <string name="welcome_message_one">Welcome to the Interconnected \n World Of WadzPay!</string>
    <string name="welcome_description_one">WadzPay anyone, buy anything in any \n digitalcurrency. create your own unique \n WadzPay address before any one else does</string>
    <string name="convert_to_digital_asset">Convert to Digital Asset</string>
    <string name="user_email_id">User Email Id</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="scan_qr_code_to_pay">Scan QR Code To Pay</string>
    <string name="share">Share</string>
    <string name="static_qr">Static QR</string>
    <string name="static_qr_code">Merchant Static QR Code</string>
    <string name="generate_static_qr">Generate Static QR</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="str_currency_sart">SAR*</string>

</resources>
