<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/rl_top_req_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:text="@string/reset_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_tablet"
            android:textStyle="bold" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgot_password_margin_tablet"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:src="@drawable/ic_logo_wadzpay" />

    <EditText
        android:id="@+id/et_user_id_forgot_v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_tablet"
        android:autofillHints="emailAddress"
        android:hint="@string/user_email_id"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:maxLines="1"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_tablet"
        android:layout_marginBottom="1dp"
        android:textSize="@dimen/text_view_tablet"
        android:visibility="gone"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_id_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_user_id"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textSize="@dimen/text_view_tablet"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_hint"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_submit_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_tablet"
        android:background="@drawable/btn_corners_app_color"
        android:padding="@dimen/button_padding_tablet"
        android:text="@string/submit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/text_view_tablet"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/app_name"
            android:textSize="8sp" />
    </LinearLayout>

</LinearLayout>